# pptx-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/package/: content_type.rs  mod.rs
src/package/common/: color.rs  fill.rs  font.rs  mod.rs
src/package/doc_props/: app.rs  core.rs  mod.rs
src/package/ppt/: mod.rs  pres_props.rs  presentation.rs  table_styles.rs  view_props.rs
src/package/ppt/_rels/: mod.rs  presentaion_xml_rels.rs
src/package/ppt/media/: mod.rs
src/package/ppt/theme/: mod.rs
src/xml/: mod.rs
src/zip/: mod.rs
